k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metronome-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: metronome
  template:
    metadata:
      labels:
        app: metronome
    spec:
      containers:
        - name: metronome
          image: vasanthkumar01/metronome-tempo-keeper:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
