k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metronome-service
spec:
  selector:
    app: metronome
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
